# mplnow

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example-jupyter.ipynb  example-jupyter.py  example-script.py  generate-ipynb.sh  ipywidgets-interact.py
mplnow/: __init__.py  drawing.py  stopwatch.py  utils.py
