[tool.poetry]
name = "mplnow"
version = "0.1.0"
description = "Immediate mode style API for live, interactive, and animated matplotlib plots"
authors = ["Callum Doolin <callum@resolvedinstruments.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = ">=3.8.0"
numpy = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
jupytext = "^1.16.4"


[tool.poetry.group.examples.dependencies]
ipykernel = "^6.29.5"
ipympl = "^0.9.4"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
